# CmakePackage

./: .gitignore  README.md
Myapp/: CMakeLists.txt  myapp.cpp
Mylib/: CMakeLists.txt  mylib.cpp
Mylib/install/include/: mylib.h
Mylib/install/lib/cmake/mylib/: mylib-config-debug.cmake
